# wahaha

./: .gitignore  LICENSE  README.md  pyproject.toml  wahaha_train.ipynb
bot/: bert.py  client.py  mjai.py
bot/mjlegal/: action.py  game_state.py  hand_tool.py  mjai.py  mjai_player_loader.py  mjai_possible_action.py  mjtypes.py  player_state.py  possible_action.py
features/: mj2vec.py  mjai_encoder.py  simple_encoder.py
mj2vec/: mj2vec.py
test/: test_mj2vec.py  test_mjai_encoder.py  test_preprocess.py  test_simple.py
test/test_data/: 2020010100gm-00b9-0000-7a6863a8.mjson
tool/: augmentation_mjson.py  convert_ckpt.py  filter_mjson.py  finetuning_preprocess.py  npz2txt.py  npz_stat.py  pl_to_transformers.py  preprocess.py  print_model_info.py  reach_preprocess.py  shuf.py  stat_mjai_score.py  view_ckpt.py
train/: wahaha_tpu.ipynb  wahaha_train.py
