[tool.poetry]
name = "wahaha"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^1.26.2"
torch = "^2.1.0"
torchvision = "^0.16.0"
transformers = "^4.35.0"
pytorch-lightning = "^2.1.1"
torchinfo = "^1.8.0"
mahjong = "1.1.11"
mjlegal = {path = "../mjlegal"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
